--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     font-size: 16px;
     font-weight: 500;
-    font-family: 'El Messiri';
+    font-family: 'Roboto';
     background: url(../img/Background__body.jpg) no-repeat left top;
     background-size: 1920px 1080px;
     overflow-x: hidden;
@@ -28,6 +28,7 @@ body{
     letter-spacing: 3px;
     text-align: center;
     color: white;
+    text-transform: uppercase;
     animation: 1.4s forwards timer__opasity;
 }
 .logo__image {
